--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 crispy-bootstrap5==0.6
+defusedxml==0.7.1
+diff-match-patch==20230430
 dj-database-url==2.1.0
 dj-email-url==1.0.6
 Django==5.0.2
@@ -8,16 +10,25 @@ django-cache-url==3.4.5
 django-crispy-forms==1.13.0
 django-datatables-view==1.20.0
 django-htmx==1.17.3
+django-import-export==3.3.7
 django-jazzmin==2.6.0
 django-utils2==3.0.2
 environs==9.3.5
+et-xmlfile==1.1.0
+MarkupPy==1.14
 marshmallow==3.20.2
+odfpy==1.4.1
+openpyxl==3.1.2
 packaging==23.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 python-utils==3.8.2
+PyYAML==6.0.1
 six==1.16.0
 sqlparse==0.4.4
+tablib==3.5.0
 typing_extensions==4.9.0
 tzdata==2023.4
 whitenoise==6.6.0
+xlrd==2.0.1
+xlwt==1.3.0
