--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.3
 crispy-bootstrap5==0.6
 defusedxml==0.7.1
 diff-match-patch==20230430
@@ -9,6 +10,7 @@ django-admin-generator==2.6.0
 django-cache-url==3.4.5
 django-crispy-forms==1.13.0
 django-datatables-view==1.20.0
+django-easy-audit==1.3.6
 django-htmx==1.17.3
 django-import-export==3.3.7
 django-jazzmin==2.6.0
@@ -25,6 +27,7 @@ python-dotenv==1.0.1
 python-utils==3.8.2
 PyYAML==6.0.1
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 tablib==3.5.0
 typing_extensions==4.9.0
