--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 beautifulsoup4==4.12.3
 Brotli==1.1.0
+click==8.1.7
 crispy-bootstrap5==0.6
 defusedxml==0.7.1
 diff-match-patch==20230430
@@ -18,6 +19,7 @@ django-utils2==3.0.2
 environs==9.3.5
 et-xmlfile==1.1.0
 gunicorn==22.0.0
+h11==0.14.0
 MarkupPy==1.14
 marshmallow==3.20.2
 odfpy==1.4.1
@@ -33,6 +35,7 @@ sqlparse==0.4.4
 tablib==3.5.0
 typing_extensions==4.9.0
 tzdata==2023.4
+uvicorn==0.29.0
 whitenoise==6.6.0
 xlrd==2.0.1
 xlwt==1.3.0
