--- a/render.yaml
+++ b/render.yaml
@@ -7,14 +7,14 @@ databases:
 services:
   - type: web
     plan: free
-    name: mysite
+    name: Django-Orders_app 
     runtime: python
     buildCommand: "./build.sh"
     startCommand: "python -m gunicorn project.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysitedb
+          name: studio_vision
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
