--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,10 @@ django-htmx==1.17.3
 django-import-export==3.3.7
 django-jazzmin==2.6.0
 django-online-users==0.3
-django-utils2==3.0.2
 django-stubs==5.0.0
 django-stubs-ext==5.0.0
+django-utils2==3.0.2
+django_components==0.74
 environs==9.3.5
 et-xmlfile==1.1.0
 gunicorn==22.0.0
@@ -62,6 +63,7 @@ sqlparse==0.4.4
 tablib==3.5.0
 Twisted==24.3.0
 txaio==23.1.1
+types-PyYAML==6.0.12.20240311
 typing_extensions==4.9.0
 tzdata==2023.4
 uvicorn==0.29.0
@@ -69,4 +71,3 @@ whitenoise==6.6.0
 xlrd==2.0.1
 xlwt==1.3.0
 zope.interface==6.3
-
