--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,13 @@ services:
       context: .
     ports:
       - "8000:8000"
-    command: ["sh", "./start.sh"]
     volumes:
-      - .:/app
       - ~/orders:/root/orders
     env_file:
       - .env
     depends_on:
       - postgres_db
+    restart: always
 
   postgres_db:
     image: postgres
@@ -23,6 +22,7 @@ services:
       - POSTGRES_DB=${P_DATABASE}
       - POSTGRES_USER=${P_USER}
       - POSTGRES_PASSWORD=${P_PASSWORD}
+    restart: always
 
 volumes:
   postgres_data:
