--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       - postgres_db
     restart: always
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   postgres_db:
     image: postgres:16
@@ -54,6 +56,8 @@ services:
     depends_on:
       - web
     restart: always
+    extra_hosts:
+      - "host.docker.internal:172.18.0.3"
 
 volumes:
   postgres_data:
