--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - .env
     depends_on:
       - postgres_db
+      - minio
     restart: always
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -36,8 +37,8 @@ services:
       bash -c "while true; do
         PGPASSWORD=AAsd@01203394542 pg_dump -h postgres_db -U alien -Fc vision > /backup/$$(date +%Y-%m-%d-%H-%M-%S).dump
         echo ""Backup done at $$(date +%Y-%m-%d_%H:%M:%S)""
-        ls -1 /backup/*.dump | head -n -5 | xargs rm -f
-        sleep 43200
+        ls -1 /backup/*.dump | head -n -10 | xargs rm -f
+        sleep 21600
       done"
     environment:
       - P_DATABASE=${P_DATABASE}
@@ -59,5 +60,24 @@ services:
     extra_hosts:
       - "host.docker.internal:172.18.0.3"
 
+  minio:
+    image: minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    restart: always
+
 volumes:
   postgres_data:
+  minio_data:
