--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "dev": "tailwindcss -i static/src/input.css -o static/src/output.css --watch"
+    "dev": "tailwindcss -i staticfiles/src/input.css -o static/src/output.css --watch"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.7"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.0.19",
+    "@fontsource/rubik": "^5.0.20",
     "alpine": "^0.2.1",
-    "flowbite": "^2.3.0"
+    "flowbite": "^2.4.1"
   }
 }
